# deepsprite

./: .gitignore  README.md  download_data.sh  pyproject.toml  requirements.txt
conf/: config.yaml
conf/dataset/: affnist.yaml  clevr.yaml  clevr6.yaml  dsprites_gray.yaml  fashion_mnist.yaml  frgc.yaml  gtsrb8.yaml  svhn.yaml  tetrominoes.yaml  usps.yaml
conf/hydra/launcher/: jz.yaml
conf/model/clustering/: affnist.yaml  affnist_dti.yaml  fashion_mnist.yaml  fashion_mnist_dti.yaml  frgc.yaml  frgc_dti.yaml  gtsrb8.yaml  gtsrb8_dti.yaml  mnist.yaml  mnist_color.yaml  mnist_color_dti.yaml  mnist_dti.yaml  svhn.yaml  svhn_dti.yaml  usps.yaml  usps_dti.yaml
conf/model/multilayer/: clevr.yaml  clevr6.yaml  clevr6_dti.yaml  clevr6_dti_long.yaml  clevr_dti.yaml  clevr_dti_long.yaml  dsprites_gray.yaml  dsprites_gray_dti.yaml  dsprites_gray_dti_long.yaml  gtsrb8.yaml  gtsrb8_dti.yaml  svhn.yaml  svhn_dti.yaml  tetrominoe_dti.yaml  tetrominoes.yaml  tetrominoes_dti_long.yaml
conf/training/clustering/: affnist.yaml  affnist_dti.yaml  fashion_mnist_dti.yaml  frgc.yaml  frgc_dti.yaml  gtsrb8.yaml  gtsrb8_dti.yaml  mnist.yaml  mnist_color.yaml  mnist_color_dti.yaml  svhn.yaml  svhn_dti.yaml  usps.yaml  usps_dti.yaml
conf/training/multilayer/: clevr.yaml  clevr6.yaml  clevr6_dti.yaml  clevr_dti.yaml  dsprites_gray.yaml  dsprites_gray_dti.yaml  gtsrb8.yaml  gtsrb8_dti.yaml  svhn.yaml  svhn_dti.yaml  tetrominoes.yaml  tetrominoes_dti.yaml
src/: clustering_trainer.py  multilayer_trainer.py
src/dataset/: __init__.py  fleurons.py  multi_object.py
src/model/: __init__.py  clustering.py  multilayer.py  tools.py  transformer.py
src/utils/: image.py  metrics.py  path.py
